src/migration/sea_orm/uuid/snapshots/roadster__migration__sea_orm__uuid__tests__drop_uuid_ossp_extension.snap
---
source: src/migration/sea_orm/uuid/mod.rs
expression: statement
---
Statement {
    sql: "DROP EXTENSION IF EXISTS \"uuid-ossp\";",
    values: None,
    db_backend: Postgres,
}
